# qm_tools

./: LICENSE  README.md  build.sh  main.py  modified.xyz  molecule.xyz  pyproject.toml  setup.cfg
src/qm_tools_aw/: __init__.py  molecular_visualization.py  periodictable.py  plot.py  qca.py  sapt.py  software_access.py  tools.py
