[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qm_tools_aw"
version = "1.5.3"
authors = [
  { name="Austin M. Wallace", email="awallace43@gatech.edu" },
]
description = "Provides some functions that I have found value in reusing for quantum chemistry related tasks."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Awallace3/qm_tools"
"Bug Tracker" = "https://github.com/Awallace3/qm_tools/issues"

[project.optional-dependencies]
tests = [
    "numpy",
    "qcelemental",
]


[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}.{ccount}+git.{sha}"
dirty_template = "{tag}.{ccount}+git.{sha}.dirty"
